# headless-open-erp

./: .gitignore  ARCHITECTURE_REFACTORING.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  refinery.toml  requirements.txt  run_migrations.py
.sqlx/: query-069c5e79bf5aed8a8f59d706bd9de03e24470e6f4fc0560596beb30c6584ce8a.json  query-072bf7dbc743b25c05e5d2c1e0e812b7f48dd634df8886d41a6fb2ce58d34626.json  query-3c679645e83da10ae4fcce1fa0d671e5ac2d2a5fc4b6f4ac87776dfe606d6dfd.json  query-3dc880dd97c8d3beb262f53c7a7435968f8a76bc9d39298de9f0eccb8fa81da3.json  query-4f5542081f33b37da6e7b0ac7403083462ccf0acb6bd56782390567175da9197.json  query-56fcbad6477b730c5de2f607f026a141da62bf6ebf269f874c566231ec4cc2d6.json  query-67bcb01bb8be7abce028b0bb8ba2befabb8415eb206705854915d1f599ed72b4.json  query-6ec9caee09aff8132111a1173166957f6c2365b45314ba1aa4ad74c7e275447c.json  query-7910f7d15fb9478d81c43a99b271e5315b0713d3e204ce7934ba45c5b81fe51a.json  query-7e09fea583141f0a884a3df567865281e053123ef6dfbacddc66114fec44b109.json  query-8d18b39fa5aaade2f86a7841ed984bdbffe890a0a48c5ed8b3dbd450dc5f8490.json  query-9066d75939672adce94e265e715167698c3f68eb9502dcd4e79567a17b37b562.json  query-99b808f679dca5825d339b83cb4c73e7402894ab192856cbe646d2560f3d3e6e.json  query-9db54de55e1a612fd480358adebf24487d9b212f406ff571a8c5fe0c11f057e9.json  query-b75426308374500cfaaa52e3ba0ab0583c20a2df345563fcab607c3f42cad1c4.json  query-c482bb96bebde4e3e34a03d5ad7be1d7831304dee06401f727f99a11dc7e0740.json  query-c730a85be55a59393a01ab29256a6e35bffffda61829e842295e054c7f8f35b1.json  query-d73d639dcef75b7f251fcbe3d2a20cc76dda57ea2a131dd43e6a6234cfe4dc8a.json  query-da94bcbfab814508beaa2af4f85ffa38766152ec73a7a4c9b1afb3f296742a4a.json  query-dd178eb808a67727301f57ae2a1bf08958deb4358cef4505d201d011cf6c045c.json  (+2 more)
domain/: calendar.py  (+3 more)
(+132 files in other folders)
