[package]
name = "headless-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json" ] }
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
refinery-macros = "0.8.16"
dotenv = "0.15.0"
lettre = { version = "0.11.18", default-features = false, features = ["tokio1-rustls-tls", "builder"] }
openidconnect = "4.0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.23", features = ["json"] }
tower-http = { version = "0.6.6", features = ["cors"] }
