[package]
name = "headless-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json" ] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
refinery-macros = "0.8"
dotenv = "0.15"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder"] }
openidconnect = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
